--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Hello, world!</title>
+    <title>Top ten places to visit San Francisco</title>
   </head>
   <body>
     <div class="jumbotron">
